<resources>
    <string name="app_name">Medic</string>
    
    <!-- Strings related to login -->
    <string name="log_in">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="link_to_forgot_password">Forgotten Password?</string>
    <string name="link_to_register">New? Sign Up</string>

    <!-- String Related to register -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_text">Please Enter your Details</string>

    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_date_of_birth">Date of Birth yyyy/mm/dd</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_doctor_id">Doctor\'s Id</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_activity_patient_entries">PatientEntries</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_all_statistics">all_statistics</string>
    <string name="title_activity_list_item">list_item</string>
    <string name="title_activity_add_statistics">AddStatistics</string>

    <!-- Strings Realated to Add Statistics -->
    <string name="enter_statistics">Submit New Entry</string>
    <string name="enter_details">Please Enter Relevant Details</string>
    <string name="prompt_glucose_level">Glucose Level</string>
    <string name="prompt_weight">Weight (Kgs)</string>
    <string name="prompt_cholesterol">Cholesterol Level</string>
    <string name="prompt_comments">Comments</string>
    <string name="action_submit">Submit</string>
    <string name="title_activity_temp_act">tempACt</string>



</resources>
