<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_register"
        tools:context="com.example.deepakkumar.medic.Register">

        <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true">

        </ScrollView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/scrollView"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/scrollView"
            android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/sign_up"
                    android:id="@+id/RegisterView"
                    android:elegantTextHeight="false"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sign_up_text"
                android:id="@+id/prompterView"
                android:layout_marginTop="32dp"/>
        <EditText
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstName"
                    android:autoText="true"
                    android:inputType="textPersonName"
                    android:hint="@string/prompt_first_name"
                    android:layout_marginTop="40dp"/>
        <EditText android:layout_width="224dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/lastName" android:autoText="true"
                  android:inputType="textPersonName"
                  android:hint="@string/prompt_last_name"/>
        <EditText android:layout_width="226dp"
                  android:layout_height="wrap_content" android:id="@+id/date_of_birth"
                  android:autoText="true"
                  android:hint="@string/prompt_date_of_birth"
                  android:inputType="text"/>
        <EditText android:layout_width="225dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/phone_number" android:autoText="true"
                  android:hint="@string/prompt_phone_number"
                  android:inputType="phone"/>
        <EditText android:layout_width="225dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/email_id" android:autoText="true"
                  android:hint="@string/prompt_email"
                  android:inputType="textEmailAddress"/>
        <EditText android:layout_width="226dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/password" android:autoText="true"
                  android:hint="@string/prompt_password"
                  android:inputType="textPassword"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:id="@+id/signUpButton"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
