<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_add_statistics"
        tools:context="com.example.deepakkumar.medic.AddStatistics">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/enter_statistics"
                    android:id="@+id/RegisterView"
                    android:elegantTextHeight="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/enter_details"
                    android:id="@+id/prompterView"
                    android:layout_marginTop="32dp"/>
            <EditText
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/GlucoseLevel"
                    android:hint="@string/prompt_glucose_level"
                    android:layout_marginTop="40dp" android:inputType="number"/>
            <EditText android:layout_width="224dp"
                      android:layout_height="wrap_content"
                      android:id="@+id/Cholesterol" android:autoText="true"
                      android:hint="@string/prompt_cholesterol"
                      android:inputType="number"/>
            <EditText android:layout_width="226dp"
                      android:layout_height="wrap_content"
                      android:id="@+id/Weight"
                      android:autoText="true"
                      android:hint="@string/prompt_weight"
                      android:inputType="numberDecimal"/>
            <EditText android:layout_width="226dp"
                      android:layout_height="100dp"
                      android:id="@+id/Comments" android:autoText="true"
                      android:hint="@string/prompt_comments"
                      android:inputType="textCapSentences|textLongMessage|textAutoCorrect"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_submit"
                    android:id="@+id/submitButton"
                    android:layout_marginTop="12dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
